--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dongle&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+/* font-family: 'Cookie', cursive; */
+/* font-family: 'Pacifico', cursive; */
+/* font-family: 'Dongle', sans-serif; */
+/* font-family: 'Dancing Script', cursive; */
+/* font-family: 'Satisfy', cursive; */
 * {
     /*border: 1px solid #fff;*/
     box-sizing: border-box;
@@ -191,7 +200,8 @@ h2 {
     text-align: center;
     font-size: 18px;
     line-height: 1.8rem;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Cookie', cursive;
+    text-transform: capitalize;
     font-weight: bold;
     word-spacing: 0.4rem;
     letter-spacing: 0.08rem;
