--- a/style.css
+++ b/style.css
@@ -247,9 +247,9 @@ h2 {
     background-image: url(img/gifts.jpeg);
 }
 
-.carousel-control-next-icon, .carousel-control-prev-icon {
+/* .carousel-control-next-icon, .carousel-control-prev-icon {
     display: none;
-}
+} */
 
 .carousel-indicators li {
     visibility: hidden;
